# scorecard2

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.ci.yml
.github/workflows/: e2e.yml  pre-commit.yaml  test.yaml  test_be.yaml  test_e2e.yml  test_fe.yaml
backend/: main.py  pyproject.toml  shell.py
backend/alembic/: env.py
backend/alembic/versions/: 5c89a726934c_add_item_migration.py  7e09fa75df7a_add_initial_migration.py
backend/app/: factory.py
backend/app/api/: items.py  users.py
backend/app/core/: config.py
backend/app/models/: item.py  user.py
backend/tests/: conftest.py  test_factory.py
backend/tests/api/: test_items.py  test_users.py  test_utils.py
backend/tests/core/: test_config.py
backend/tests/models/: test_user.py
frontend/: Dockerfile  cypress.config.ts  package.json
frontend/cypress/e2e/: app.cy.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/components/: Auth.tsx
frontend/src/pages/: Dashboard.test.tsx  Login.test.tsx  ProfileEdit.tsx  Register.test.tsx
