[tool.poetry]
name = "scorecard2-backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = "^1.10.12"
requests = "^2.31.0"
alembic = "^1.11.3"
psycopg2-binary = "^2.9.7"
asyncpg = "^0.29.0"
SQLAlchemy = "^2.0.20"
gunicorn = "^21.2.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pytest = "^7.4.3"
ipython = "^8.22.1"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"
pytest-asyncio = "^0.23.5"
ruff = "^0.2.2"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["alembic/**/*", "alembic/*"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["B008", "F401", "UP007"]
exclude = ["alembic/**/*", "alembic/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.cruft]
skip = [".env"]

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[tool.coverage.run]
omit = ["tests/*", "alembic/*", "*/__init__.py"]
