[tool.poetry]
name = "scorecard2-backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pydantic = "^2.7.4"
requests = "^2.31.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
SQLAlchemy = "^2.0.29"
gunicorn = "^21.2.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
platformdirs = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ipython = "^8.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.21.1"
ruff = "^0.4.4"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["alembic/**/*", "alembic/*"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["B008", "F401", "UP007"]
exclude = ["alembic/**/*", "alembic/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.cruft]
skip = [".env"]

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[tool.coverage.run]
omit = ["*/__init__.py"]
concurrency = ["greenlet", "thread"]
